# api/resource/res_ledger.go
@@ -1,5 +1,11 @@
 package resource
 
+// ResGetLedgers is a response for getting ledgers.
+type ResGetLedgers struct {
+	Ledgers []ResGetLedger `json:"ledgers"`
+}
+
+// ResGetLedger is a response for getting a ledger.
 type ResGetLedger struct {
 	LedgerID string `json:"ledger_id"`
 	UserID   string `json:"user_id"`
