# docs/swagger.yaml
@@ -40,6 +40,13 @@ definitions:
       user_id:
         type: string
     type: object
+  resource.ResGetLedgers:
+    properties:
+      ledgers:
+        items:
+          $ref: '#/definitions/resource.ResGetLedger'
+        type: array
+    type: object
   resource.ResGetTime:
     properties:
       date:
@@ -80,13 +87,13 @@ paths:
       summary: Add ledger
       tags:
       - Ledger
-  /api/household-ledger/ledger/{id}:
+  /api/household-ledger/ledger/{ledger_id}:
     get:
-      description: Gets ledger with {id} from db.
+      description: Gets ledger with {ledger_id} from db.
       parameters:
       - description: ledger id
         in: path
-        name: id
+        name: ledger_id
         required: true
         type: string
       produces:
@@ -109,6 +116,37 @@ paths:
           schema:
             $ref: '#/definitions/resource.ResErr'
       summary: Get ledger
+      tags:
+      - Ledger
+  /api/household-ledger/ledgers/{user_id}:
+    get:
+      description: Gets ledgers with {user_id} from db.
+      parameters:
+      - description: user id
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/resource.ResGetLedgers'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/resource.ResErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/resource.ResErr'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/resource.ResErr'
+      summary: Get ledgers
       tags:
       - Ledger
   /api/household-ledger/ping:
